Fix link on index page

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,7 +8,7 @@
   %h1 The Marlowe Project
   %p
     Marlowe is meant to be a workspace for experimenting with visualizing and interacting with web transaction data
-    using D3.  For more information, refer to the 
+    using D3.  For more information, refer to the
     %a{href: "http://github.com/newrelic/marlowe"}
       Project Readme file.
   %h3 Experiments
@@ -28,6 +28,6 @@
       %a{href:"datasets/quartiles.html"}
         Experiment with estimating middle quartiles
     %li
-      %a{href:"datasets/quartiles.html"}
+      %a{href:"datasets/traffic.html"}
         Fun animation of application traffic
 
